Bug 128972 - 'Recent used:' box in Database Wizard is narrow and not expandable - VCL/KDE
Summary: 'Recent used:' box in Database Wizard is narrow and not expandable - VCL/KDE
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
6.2.8.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium trivial
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.5.0 target:6.4.0.1
Keywords:
Depends on:
Blocks:
 
Reported: 2019-11-23 05:18 UTC by Nukool Chompuparn
Modified: 2019-12-17 11:20 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
'Recent used:' box (41.02 KB, image/jpeg)
2019-11-23 05:19 UTC, Nukool Chompuparn
Details
SAL_VCL_PLUGIN=gen (21.09 KB, image/jpeg)
2019-12-03 07:42 UTC, Nukool Chompuparn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nukool Chompuparn 2019-11-23 05:18:31 UTC
Description:
'Recent used:' box size is not enough for long name of database

Steps to Reproduce:
1.Open Base application
2.
3.

Actual Results:
'Recent used:' box is narrow

Expected Results:
Modify the Database Wizard panel in order to have more space to expand 'Recent used:' box.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Nukool Chompuparn 2019-11-23 05:19:46 UTC
Created attachment 156056 [details]
'Recent used:' box
Comment 2 Alex Thurgood 2019-11-26 09:58:20 UTC
@Nukool : Is this with the vcl-kde plugin ?

What happens if you use the generic vcl backend instead ?

Start LO from terminal with SAL_VCL_PLUGIN=gen
Comment 3 Nukool Chompuparn 2019-12-03 07:41:23 UTC
(In reply to Alex Thurgood from comment #2)
> @Nukool : Is this with the vcl-kde plugin ?
> 
> What happens if you use the generic vcl backend instead ?
> 
> Start LO from terminal with SAL_VCL_PLUGIN=gen

There was nothing happened. Please see next attachment.
Comment 4 Nukool Chompuparn 2019-12-03 07:42:08 UTC
Created attachment 156259 [details]
SAL_VCL_PLUGIN=gen
Comment 5 Alex Thurgood 2019-12-03 10:23:52 UTC
@Nukool:

https://ask.libreoffice.org/en/question/3078/choose-gui-toolkit-for-lo-session/

This is usually done from the terminal with :

SAL_VCL_PLUGIN=gen path/to/soffice 

in other words, specify the VCL backend as above and launch soffice from the command line in the same command.

You might need to install the libreoffice GTK3 package in order for this to work. 

Which Linux OS are you using ?
Comment 6 Nukool Chompuparn 2019-12-05 03:07:38 UTC
(In reply to Alex Thurgood from comment #5)
> @Nukool:
> 
> https://ask.libreoffice.org/en/question/3078/choose-gui-toolkit-for-lo-
> session/
> 
> This is usually done from the terminal with :
> 
> SAL_VCL_PLUGIN=gen path/to/soffice 
> 
> in other words, specify the VCL backend as above and launch soffice from the
> command line in the same command.
> 
> You might need to install the libreoffice GTK3 package in order for this to
> work. 
> 
> Which Linux OS are you using ?

I am using Fedora 31 Workstation KDE Desktop from Spins.
Comment 7 QA Administrators 2019-12-05 04:27:43 UTC Comment hidden (obsolete)
Comment 8 Roman Kuznetsov 2019-12-12 14:07:18 UTC
Caolan may be you'll can look at it?
Comment 9 Caolán McNamara 2019-12-12 16:24:42 UTC
in 6-4 the dialog is resizable which affects this somewhat
Comment 10 Commit Notification 2019-12-12 20:58:31 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dac33e465a19f0cdd8b8450ca1631cb3e09d771f

Resolves: tdf#128972 limit width of combobox of recently-used

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Xisco Faulí 2019-12-16 12:37:35 UTC
Verified in

Version: 6.5.0.0.alpha0+
Build ID: 3e33a11d8a553a99bd5f23940a65c301924198fb
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!!
Comment 12 Commit Notification 2019-12-16 12:39:12 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/8525523c926305d134324f16f31c5b10e474808e

Resolves: tdf#128972 limit width of combobox of recently-used

It will be available in 6.4.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.