Resolves: tdf#128972 limit width of combobox of recently-used

in the wizard so that the end of the combobox is available and the
dialog isn't oversized.

the user can resize the window to see more of the text of the recently-used

Change-Id: Ic0b8d6c6e8840052e8f20e9f9a13d44140efde85